fix text overflow

--- a/style.css
+++ b/style.css
@@ -210,9 +210,8 @@ p {
 	color: var(--bga-04);
 	font-weight: 400;
 	text-indent: 1.5em;
-	padding: 1em 0.8em 2em 0.8em;
-	width: 600px;
 	max-width: 66ch;
+	padding: 1em 0.8em 2em 0.8em;
 }
 
 @media only screen and (min-width: 1024px) {
